# illiterally

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  python-package.yml  unit-tests.yml
docs/: example.html  example.md  example.tex  handmoji.md  implementation.md  nomoji.md
illiterally/: __init__.py  block.py  cli.py  illiterally.py  state.py
illiterally/data/blocks/: block.html  block.md  block.tex  block.txt  macros.html.inc  macros.md.inc  macros.tex.inc  macros.txt.inc
illiterally/data/examples/: README.md
illiterally/data/examples/docs/: example.html  example.md  example.tex  handmoji.md  implementation.md  nomoji.md
lit/: cli.py  lit.py
lit/data/: pandoc.css
lit/data/blocks/: block.md  macros.md.inc
lit/data/examples/: README.md  example.cpp  example.md  handmoji.cpp  nomoji.cpp  nomoji.md
lit/data/examples/docs/: handmoji.md
tests/: test_cli.py  test_demo.py  utils.py
tests/test_data/source_files/: source1.txt  source2.txt
tests/test_data/template_files/: output1.txt  output2.txt
